* Fixes set polyfill for IE11 * Fixes attempt score info dialog blurry in chrome * Fixes dialog boxes having scrollbars in edge

--- a/src/scripts/common/components/modal/modal.scss
+++ b/src/scripts/common/components/modal/modal.scss
@@ -5,7 +5,7 @@
 	// border: 1px solid $color-shadow;
 	padding: 1.5rem 3em;
 	min-width: 15em;
-	position: relative;
+	// position: relative;
 	box-shadow: 0 1px 1px $color-shadow;
 	border-radius: 2px;
 	max-height: 70vh;
